--- a/src/css/base.css
+++ b/src/css/base.css
@@ -30,3 +30,100 @@ main {
 main:has(.back-link) {
   text-align: center;
 }
+* {
+  box-sizing: border-box;
+}
+body {
+  /* margin: 28px auto; */
+  background-color: #fff;
+}
+/* Галерея */
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+.gallery-item {
+  width: calc((100% - 24px * 2) / 3);
+  list-style-type: none;
+  margin: 0;
+}
+.gallery-image {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+/* Форма */
+.feedback-form {
+  border-radius: 8px;
+  padding: 24px;
+  width: 408px;
+  height: 296px;
+  margin: auto;
+}
+.email-wrapper {
+  margin-bottom: 8px;
+}
+.email-text .message-text {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+.email-input {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  width: 360px;
+  height: 40px;
+  padding: 8px 16px;
+}
+.email-input:hover {
+  border: 1px solid #000;
+  border-radius: 4px;
+}
+.email-input:focus {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  outline: none;
+}
+.message-wrapper {
+  margin-bottom: 16px;
+}
+.message-textarea {
+  width: 360px;
+  height: 80px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  resize: none;
+  padding: 16px 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+.message-textarea:focus {
+  outline: none;
+}
+
+.form-button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 95px;
+  height: 40px;
+  background-color: #4e75ff;
+  cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+.form-button:hover {
+  background-color: #6c8cff;
+}
